# Volkskette

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  MEMORY_MANAGEMENT.md  PHASE_4_1_SUMMARY.md  PRODUCTION_READINESS_STATUS.md  VIABILITY_ROADMAP.md  blockchain.cpp  blockchain.hpp  blockchain.py  contract.cpp  contract.hpp  contract_examples.cpp  main.cpp  main.py  main_p2p.cpp  main_single_node.cpp  network_manager.cpp  network_manager.hpp  node.cpp  node.hpp  persistent_store.cpp  persistent_store.hpp  rpc_server.cpp  rpc_server.hpp
Docs/: ACCOUNT_STATE_SYNC_DESIGN.md  EXECUTION_SUMMARY.txt  IMPROVEMENTS_ROADMAP.md  NETWORK_VIABILITY_ROADMAP.md  P2P_CODE_PATTERNS.md  P2P_IMPLEMENTATION_SUMMARY.md  PHASE1_COMPLETION.md  PHASE1_HANG_FIX.md  PHASE1_QUICK_START.md  PHASE2_P2P_CONSENSUS.md  PHASE2_QUICK_START.md  PROJECT_STATUS.md  README.md  SMART_CONTRACTS.md  STATUS.md
utils/: logger.cpp  logger.hpp  memory_monitor.hpp  memory_utils.hpp
